# TUGAS_ISI

./: gui.py
server/: Cargo.toml
server/src/: main.rs
sht20/: Cargo.toml
sht20/src/: main.rs
